hphp/test/zend/good/ext/gd/tests/imagesetthickness_error2.php
<?hh <<__EntryPoint>> function main(): void {
$image = imagecreatetruecolor(200, 100);

try { imagesetthickness($image, 's'); } catch (Exception $e) { echo "\n".'Warning: '.$e->getMessage().' in '.__FILE__.' on line '.__LINE__."\n"; }
try { imagesetthickness($image, vec[]); } catch (Exception $e) { echo "\n".'Warning: '.$e->getMessage().' in '.__FILE__.' on line '.__LINE__."\n"; }
try { imagesetthickness($image, $image); } catch (Exception $e) { echo "\n".'Warning: '.$e->getMessage().' in '.__FILE__.' on line '.__LINE__."\n"; }
}
